Added search bar, hero updates, and assets

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.43.1",
     "@tailwindcss/vite": "^4.1.12",
     "humanize-duration": "^3.33.0",
     "quill": "^2.0.3",
